# SEI-CERT-C-Coding-Standard

./: .clang-format  .clangd  CMakeLists.txt  README.md
src/2_声明和初始化/: 01_不要定义C风格的可变参函数.cpp  02_不要声明或者定义保留标识符.cpp  03_切勿使用const或volatile修饰引用类型.cpp  04_不要编写语法不明确的声明.cpp  05_同一作用域申请内存和释放内存要同时实现.cpp  06_避免静态对象初始化期间的循环.cpp  README.md
